--- a/src/app/feature/components/session/resetpassword/resetpassword.component.html
+++ b/src/app/feature/components/session/resetpassword/resetpassword.component.html
@@ -7,16 +7,23 @@
             <form name="form" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
                 <div class="login-container">
                     <div class="row">
+                        <div class="col-md-12 mb-1" *ngIf="token==undefined">
+                            <div class="form-group">
+                                <label>Contraseña Actual</label>
+                                <input type="password" name="pass" required class="form-control"
+                                    formControlName="oldPass" />
+                            </div>
+                        </div>
                         <div class="col-md-12 mb-1">
                             <div class="form-group">
-                                <label>Contraseña</label>
+                                <label>Nueva Contraseña</label>
                                 <input type="password" name="pass" required class="form-control"
                                     formControlName="pass" />
                             </div>
                         </div>
                         <div class="col-md-12 mb-1">
                             <div class="form-group">
-                                <label>Confirmar Contraseña</label>
+                                <label>Confirmar Nueva Contraseña</label>
                                 <input type="password" name="confirmpass" required class="form-control"
                                     formControlName="confirmpass" />
                             </div>
