--- a/src/app/feature/components/objects/components/create-object/create-object.component.html
+++ b/src/app/feature/components/objects/components/create-object/create-object.component.html
@@ -13,41 +13,61 @@
                         <div class="col-md-6 mb-2">
                             <div class="form-group">
                                 <label class="responsive-text">Nombre</label>
-                                <input type="text" name="email" ng-model="user.username" required class="form-control"
-                                    formControlName="name" />
+                                <input type="text" name="name" class="form-control" formControlName="name"
+                                    [ngClass]="{ 'is-invalid': (submitted && obj['name'].errors)}" />
+                                <div class="text-danger" *ngIf="submitted && obj['name'].errors?.['required']">
+                                    Nombre es requerido
+                                </div>
+                                <div class="text-danger" *ngIf="submitted && obj['name'].errors?.['minlength']">
+                                    Nombre debe tener al menos 3 caracteres
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6 mb-3">
                             <div class="form-group">
                                 <label class="responsive-text">Descripción</label>
-                                <input type="text" name="pass" required class="form-control"
-                                    formControlName="description" />
+                                <input type="text" name="description" class="form-control" formControlName="description"
+                                    [ngClass]="{ 'is-invalid': (submitted && obj['description'].errors)}" />
+
+                                <div class="text-danger" *ngIf="submitted && obj['description'].errors?.['required']">
+                                    Descripción es requerido
+                                </div>
+                                <div class="text-danger" *ngIf="submitted && obj['description'].errors?.['minlength']">
+                                    Descripción debe tener al menos 3 caracteres
+                                </div>
                             </div>
                         </div>
 
                         <div class="col-md-6 mb-3">
                             <div class="form-group">
                                 <label class="responsive-text">Estado</label>
-                                <select class="form-select" aria-label="Default select example"
-                                    formControlName="status">
+                                <select class="form-select" aria-label="Default select example" formControlName="status"
+                                    [ngClass]="{ 'is-invalid': (submitted && obj['status'].invalid)}">
                                     <option selected disabled>Selecciona una opción</option>
                                     <option value={{status}} *ngFor="let status of statuses">{{ status }}</option>
                                 </select>
+                                <div class="text-danger" *ngIf="submitted && obj['status'].invalid && submitted">
+                                    Seleccione una opción
+                                </div>
                             </div>
                         </div>
 
                         <div class="col-md-6 mb-3">
                             <div class="form-group">
                                 <label class="responsive-text">Tipo de objeto</label>
-                                <select class="form-select" aria-label="Default select example" formControlName="type">
+                                <select class="form-select" formControlName="type"
+                                    [ngClass]="{ 'is-invalid': (submitted && obj['type'].invalid)}">
                                     <option selected disabled>Selecciona una opción</option>
                                     <option value={{objectType}} *ngFor="let objectType of objectTypes">{{ objectType }}
                                     </option>
                                 </select>
+                                <div class="text-danger" *ngIf="submitted && obj['type'].invalid && submitted">
+                                    Seleccione una opción
+                                </div>
                             </div>
                         </div>
 
-                        <hr class="hr hr-blurry" />
+                        <hr class="hr hr-blurry" *ngIf="object.value.status == 'RECLAMADO'" />
                         <div *ngIf="object.value.status == 'RECLAMADO'" class="row" formGroupName="claimer">
                             <div>
                                 <label class="form-title text-center mb-3 responsive-text">Información de quién
@@ -56,56 +76,96 @@
                             <div class="col-md-6 mb-2">
                                 <div class="form-group">
                                     <label class="responsive-text">Nombre</label>
-                                    <input type="text" name="email" ng-model="user.username" required
-                                        class="form-control" formControlName="name" />
+                                    <input type="text" name="email" class="form-control" formControlName="name"
+                                        [ngClass]="{ 'is-invalid': (submitted && cla['name'].errors)}" />
+
+                                    <div class="text-danger" *ngIf="submitted && cla['name'].errors?.['required']">
+                                        Nombre es requerido
+                                    </div>
+                                    <div class="text-danger" *ngIf="submitted && cla['name'].errors?.['minlength']">
+                                        Nombre debe tener al menos 3 caracteres
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-6 mb-2">
                                 <div class="form-group">
                                     <label class="responsive-text">Apellido</label>
-                                    <input type="text" name="email" ng-model="user.username" required
-                                        class="form-control" formControlName="lastName" />
+                                    <input type="text" name="email" ng-model="user.username" class="form-control"
+                                        formControlName="lastName"
+                                        [ngClass]="{ 'is-invalid': (submitted && cla['lastName'].errors)}" />
+
+                                    <div class="text-danger" *ngIf="submitted && cla['lastName'].errors?.['required']">
+                                        Apellido es requerido
+                                    </div>
+                                    <div class="text-danger" *ngIf="submitted && cla['lastName'].errors?.['minlength']">
+                                        Apellido debe tener al menos 3 caracteres
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-6 mb-3">
                                 <div class="form-group">
                                     <label class="responsive-text">Tipo de Documento</label>
                                     <select class="form-select" aria-label="Default select example"
-                                        formControlName="documentType">
+                                        formControlName="documentType"
+                                        [ngClass]="{ 'is-invalid': (submitted && cla['documentType'].invalid)}">
                                         <option selected disabled>Seleccione una opción</option>
                                         <option value="{{documentType}}" *ngFor="let documentType of documentTypes">{{
                                             documentType
                                             }}</option>
                                     </select>
+                                    <div class="text-danger"
+                                        *ngIf="submitted && cla['documentType'].invalid && submitted">
+                                        Seleccione una opción
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-6 mb-2">
                                 <div class="form-group">
                                     <label class="responsive-text">Documento</label>
-                                    <input type="text" name="email" ng-model="user.username" required
-                                        class="form-control" formControlName="document" />
+                                    <input type="text" name="email" class="form-control" formControlName="document"
+                                        [ngClass]="{ 'is-invalid': (submitted && cla['document'].errors)}" />
+                                </div>
+                                <div class="text-danger" *ngIf="submitted && cla['document'].errors?.['required']">
+                                    Documento es obligatorio
+                                </div>
+                                <div class="text-danger" *ngIf="submitted && cla['document'].errors?.['minlength']">
+                                    Nombre debe tener al menos 6 caracteres
                                 </div>
                             </div>
                             <div class="col-md-6 mb-2">
                                 <div class="form-group">
                                     <label class="responsive-text">Contacto</label>
                                     <input type="text" name="email" ng-model="user.username" required
-                                        class="form-control" formControlName="contact" />
+                                        class="form-control" formControlName="contact"
+                                        [ngClass]="{ 'is-invalid': (submitted && cla['contact'].errors)}" />
+                                    <div class="text-danger" *ngIf="submitted && cla['contact'].errors?.['required']">
+                                        Nombre es requerido
+                                    </div>
+                                    <div class="text-danger" *ngIf="submitted && cla['contact'].errors?.['minlength']">
+                                        Nombre debe tener al menos 3 caracteres
+                                    </div>
                                 </div>
+
                             </div>
 
                             <div class="col-md-6 mb-3">
                                 <div class="form-group">
                                     <label class="responsive-text">Tipo de persona</label>
                                     <select class="form-select" aria-label="Default select example"
-                                        formControlName="userType">
+                                        formControlName="userType"
+                                        [ngClass]="{ 'is-invalid': (submitted && cla['userType'].invalid)}">
                                         <option selected disabled>Seleccione una opción</option>
                                         <option value="{{userType}}" *ngFor="let userType of userTypes">{{ userType
                                             }}</option>
                                     </select>
+                                    <div class="text-danger" *ngIf="cla['userType'].invalid && submitted">
+                                        Seleccione una opción
+                                    </div>
                                 </div>
                             </div>
                         </div>
+
+
 
                         <hr class="hr hr-blurry" />
                         <div>
@@ -134,21 +194,31 @@
                                     </div>
                                 </div>
                             </div>
-                            <ng-container *ngFor="let feature of features.controls; let i = index">
+                            <ng-container *ngFor="let featureForms of features.controls; let i = index">
                                 <div class="row" [formGroupName]="i">
                                     <div class="col col-md-5">
                                         <div class="mb-3">
-                                            <select formControlName="name" class="form-select">
+                                            <select id="name" formControlName="name" class="form-select"
+                                                [ngClass]="{ 'is-invalid': (submitted && featureForms.controls['name'].invalid)}">
                                                 <option value="" selected disabled>Seleccione una opción</option>
                                                 <option value="{{featureType}}"
                                                     *ngFor="let featureType of featureTypes">{{ featureType }}</option>
                                             </select>
+                                            <div class="text-danger"
+                                                *ngIf="featureForms.controls['name'].invalid && submitted">
+                                                Seleccione una opción
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col col-md-5">
                                         <div class="mb-3">
-                                            <input type="text" class="form-control" [id]="'experience' + i"
-                                                formControlName="description" />
+                                            <input id="description" type="text" class="form-control"
+                                                formControlName="description"
+                                                [ngClass]="{ 'is-invalid': (submitted && featureForms.controls['description'].errors?.['required'])}" />
+                                        </div>
+                                        <div class="text-danger"
+                                            *ngIf="featureForms.controls['description'].errors?.['required'] && submitted">
+                                            Descripción es obligatoria
                                         </div>
                                     </div>
                                     <div class="col col md-2  text-center">
