--- a/src/app/feature/components/session/login/login.component.html
+++ b/src/app/feature/components/session/login/login.component.html
@@ -7,47 +7,37 @@
       <form name="form" [formGroup]="form" (ngSubmit)="login()">
         <div class="login-container">
           <div class="row">
+
             <div class="col-md-12 mb-2">
               <div class="form-group">
                 <label class="responsive-text">Email</label>
-                <input
-                  type="email"
-                  name="email"
-                  required
-                  class="form-control responsive-text"
-                  formControlName="email"
-                />
+                <input type="email" name="email" class="form-control responsive-text" formControlName="email"
+                  [ngClass]="{ 'is-invalid': (submitted && f['email'].errors)}" />
+                <div class="invalid-feedback" *ngIf="(f['email'].errors)">
+                  Correo inválido
+                </div>
               </div>
             </div>
+
+
             <div class="col-md-12 mb-1">
               <div class="form-group">
                 <label class="responsive-text">Password</label>
-                <input
-                  type="password"
-                  name="pass"
-                  required
-                  class="form-control"
-                  formControlName="pass"
-                />
+                <input type="password" name="pass" class="form-control" formControlName="pass"
+                  [ngClass]="{ 'is-invalid': (submitted && f['pass'].errors)}" />
+                <div class="invalid-feedback" *ngIf="f['pass'].errors">
+                  Contraseña inválida
+                </div>
               </div>
             </div>
+
+
             <div class="col-md-12 mb-3">
-              <a [routerLink]="['/session/forgotpassword']"
-                >¿Has olvidado contraseña?</a
-              >
-            </div>
-            <div class="col-md-12 mb-3" *ngIf="!logged">
-              <div class="invalid-feedbback responsive-text">
-                Usuario y/o contraseña inválidos
-              </div>
+              <a [routerLink]="['/session/forgotpassword']">¿Has olvidado contraseña?</a>
             </div>
             <div class="col-md-12">
               <div class="form-group text-center">
-                <button
-                  type="submit"
-                  ng-disabled="myForm.$invalid"
-                  class="btn bg-blue pull-right responsive-text"
-                >
+                <button type="submit" ng-disabled="myForm.$invalid" class="btn bg-blue pull-right responsive-text">
                   Ingresar
                   <i class="fa-solid fa-arrow-right"></i>
                 </button>
