Fix: Se orrige las validaciones del reset password

--- a/src/app/feature/components/session/resetpassword/resetpassword.component.html
+++ b/src/app/feature/components/session/resetpassword/resetpassword.component.html
@@ -11,21 +11,35 @@
                             <div class="form-group">
                                 <label>Contraseña Actual</label>
                                 <input type="password" name="pass" required class="form-control"
-                                    formControlName="oldPass" />
+                                    formControlName="oldPass"
+                                    [ngClass]="{ 'is-invalid': (submitted && f['oldPass'].errors)}" />
+                                <div class="text-danger" *ngIf="submitted && f['pass'].errors['required']">
+                                    Contraseña antigua es obligatoria
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-12 mb-1">
                             <div class="form-group">
                                 <label>Nueva Contraseña</label>
-                                <input type="password" name="pass" required class="form-control"
-                                    formControlName="pass" />
+                                <input type="password" name="pass" required class="form-control" formControlName="pass"
+                                    [ngClass]="{ 'is-invalid': (submitted && f['pass'].errors)}" />
+                                <div class="text-danger" *ngIf="submitted && f['pass'].errors['required']">
+                                    Contraseña es obligatoria
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-12 mb-1">
                             <div class="form-group">
                                 <label>Confirmar Nueva Contraseña</label>
                                 <input type="password" name="confirmpass" required class="form-control"
-                                    formControlName="confirmpass" />
+                                    formControlName="confirmpass"
+                                    [ngClass]="{ 'is-invalid': (submitted && f['confirmpass'].errors)}" />
+                                <div class="text-danger" *ngIf="submitted && f['confirmpass'].errors['required']">
+                                    Confirmar contraseña es obligatorio
+                                </div>
+                                <div class="text-danger" *ngIf="submitted && f['confirmpass'].errors['matching']">
+                                    Contraseñas no coinciden
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-12 mt-3">
