--- a/src/app/feature/components/users/createuser/createuser.component.html
+++ b/src/app/feature/components/users/createuser/createuser.component.html
@@ -102,7 +102,7 @@
                 El confirmar contraseña debe contener al menos 3 letras
               </div>
               <div class="text-danger" *ngIf="usr['confirmPass'].errors['matching']">
-                Confirm Password does not match
+                Contraseñas no coinciden
               </div>
             </div>
           </div>
