Fix: se agrega componente de actualizar mi usuario y de actualizar otros usuarios diferente al componente de crear

--- a/src/app/feature/components/objects/components/create-object/create-object.component.html
+++ b/src/app/feature/components/objects/components/create-object/create-object.component.html
@@ -139,10 +139,10 @@
                                         class="form-control" formControlName="contact"
                                         [ngClass]="{ 'is-invalid': (submitted && cla['contact'].errors)}" />
                                     <div class="text-danger" *ngIf="submitted && cla['contact'].errors?.['required']">
-                                        Nombre es requerido
+                                        Contacto es requerido
                                     </div>
                                     <div class="text-danger" *ngIf="submitted && cla['contact'].errors?.['minlength']">
-                                        Nombre debe tener al menos 3 caracteres
+                                        El contacto debe tener al menos 3 caracteres
                                     </div>
                                 </div>
 
