--- a/src/app/feature/components/users/components/createuser/createuser.component.html
+++ b/src/app/feature/components/users/components/createuser/createuser.component.html
@@ -1,7 +1,7 @@
 <section id="create-user">
   <div class="container">
     <div>
-      <label class="title text-center">{{ title }}</label>
+      <label class="title text-center">Crear Usuario</label>
     </div>
     <div class="form container card p-4 mb-5">
       <div>
@@ -77,7 +77,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 mb-2" *ngIf="userId.value == undefined">
+          <div class="col-md-6 col-sm-12 mb-2">
             <div class="form-group">
               <label class="responsive-text">Contraseña</label>
               <input type="password" name="pass" class="form-control" formControlName="pass"
@@ -90,7 +90,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 mb-2" *ngIf="userId.value == undefined">
+          <div class="col-md-6 col-sm-12 mb-2">
             <div class="form-group">
               <label class="responsive-text">Confirmar Contraseña</label>
               <input type="password" name="confirmpass" class="form-control" formControlName="confirmPass"
@@ -101,7 +101,7 @@
               <div class="text-danger" *ngIf="submitted && usr['confirmPass'].errors?.['minlength']">
                 El confirmar contraseña debe contener al menos 3 letras
               </div>
-              <div class="text-danger" *ngIf="usr['confirmPass'].errors['matching']">
+              <div class="text-danger" *ngIf="submitted && usr['confirmPass'].errors?.['matching']">
                 Contraseñas no coinciden
               </div>
             </div>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="col-6">
                   <button type="submit" ng-disabled="form.$invalid" class="btn bg-blue pull-right responsive-text">
-                    {{ title }}
+                    Crear Usuario
                     <i class="fa-solid fa-arrow-right"></i>
                   </button>
                 </div>
