Feature: Se cambia el componente de actualizar objeto y se crea uno nuevo, para no tenerlos en el mismo componente y que no presente problema

--- a/src/app/feature/components/objects/components/updateobject/updateobject.component.html
+++ b/src/app/feature/components/objects/components/updateobject/updateobject.component.html
@@ -1,6 +1,6 @@
 <section id="create-object" class="container mb-5">
     <div>
-        <label class="title text-center">Crear Objeto</label>
+        <label class="title text-center">Objeto</label>
     </div>
     <div class="center-div">
         <div class="card p-4 mt-1 form-container">
@@ -240,7 +240,7 @@
                         <div class="col-md-12">
                             <div class="form-group text-center">
                                 <button type="submit" class="btn bg-blue pull-right responsive-text">
-                                    Crear Objeto
+                                    Editar Objeto
                                 </button>
                             </div>
                         </div>
