Se arregla el footer para que siempre esté en la parte de abajo de la aplicación

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <section id="app">
     <app-toaster></app-toaster>
     <app-header></app-header>
-    <router-outlet></router-outlet>
+    <div class="modules">
+        <router-outlet></router-outlet>
+    </div>
     <app-footer></app-footer>
 </section>
