--- a/src/app/feature/components/footer/footer.component.css
+++ b/src/app/feature/components/footer/footer.component.css
@@ -1,7 +1,7 @@
 #footer {
     background-color: #0F385A;
     width: 100%;
-    height: 70px;
+    height: auto;
     position: absolute fixed;
     bottom: 0;
     z-index: 1;
