--- a/src/styles.css
+++ b/src/styles.css
@@ -29,3 +29,8 @@ body::-webkit-scrollbar {
     letter-spacing: 1px;
     margin: 10px 0 20px 0;
 }
+
+body {
+    margin-bottom: 0;
+    margin-top: 0;
+}
