--- a/src/app/feature/components/session/resetpassword/resetpassword.component.html
+++ b/src/app/feature/components/session/resetpassword/resetpassword.component.html
@@ -10,10 +10,9 @@
                         <div class="col-md-12 mb-1" *ngIf="token==undefined">
                             <div class="form-group">
                                 <label>Contraseña Actual</label>
-                                <input type="password" name="pass" required class="form-control"
-                                    formControlName="oldPass"
+                                <input type="password" name="pass" class="form-control" formControlName="oldPass"
                                     [ngClass]="{ 'is-invalid': (submitted && f['oldPass'].errors)}" />
-                                <div class="text-danger" *ngIf="submitted && f['pass'].errors['required']">
+                                <div class="text-danger" *ngIf="submitted && f['oldPass'].errors?.['required']">
                                     Contraseña antigua es obligatoria
                                 </div>
                             </div>
@@ -21,9 +20,9 @@
                         <div class="col-md-12 mb-1">
                             <div class="form-group">
                                 <label>Nueva Contraseña</label>
-                                <input type="password" name="pass" required class="form-control" formControlName="pass"
+                                <input type="password" name="pass" class="form-control" formControlName="pass"
                                     [ngClass]="{ 'is-invalid': (submitted && f['pass'].errors)}" />
-                                <div class="text-danger" *ngIf="submitted && f['pass'].errors['required']">
+                                <div class="text-danger" *ngIf="submitted && f['pass'].errors?.['required']">
                                     Contraseña es obligatoria
                                 </div>
                             </div>
@@ -31,16 +30,20 @@
                         <div class="col-md-12 mb-1">
                             <div class="form-group">
                                 <label>Confirmar Nueva Contraseña</label>
-                                <input type="password" name="confirmpass" required class="form-control"
+                                <input type="password" name="confirmpass" class="form-control"
                                     formControlName="confirmpass"
                                     [ngClass]="{ 'is-invalid': (submitted && f['confirmpass'].errors)}" />
-                                <div class="text-danger" *ngIf="submitted && f['confirmpass'].errors['required']">
+                                <div class="text-danger" *ngIf="submitted && f['confirmpass'].errors?.['required']">
                                     Confirmar contraseña es obligatorio
                                 </div>
-                                <div class="text-danger" *ngIf="submitted && f['confirmpass'].errors['matching']">
+                                <div class="text-danger" *ngIf="submitted && f['confirmpass'].errors?.['matching']">
                                     Contraseñas no coinciden
                                 </div>
                             </div>
+                        </div>
+                        <div class="text-danger" *ngIf="submitted && f['pass'].errors?.['pattern']">
+                            La contraseña debe contar con al menos una letra mayúscula, una minúscula, un
+                            número, un caracter especial y mínimo 8 caracteres
                         </div>
                         <div class="col-md-12 mt-3">
                             <div class="form-group text-center">
