--- a/src/app/feature/components/users/components/createuser/createuser.component.html
+++ b/src/app/feature/components/users/components/createuser/createuser.component.html
@@ -12,7 +12,7 @@
           <div class="col-md-6 col-sm-12 mb-2">
             <div class="form-group">
               <label class="responsive-text">Nombre</label>
-              <input type="text" name="name" class="form-control" formControlName="name"
+              <input type="text" name="name" class="form-control" formControlName="name" autocomplete="off"
                 [ngClass]="{ 'is-invalid': (submitted && usr['name'].errors)}" />
               <div class="text-danger" *ngIf="submitted && usr['name'].errors?.['required']">
                 El nombre es obligatorio
@@ -25,7 +25,7 @@
           <div class="col-md-6 col-sm-12 mb-2">
             <div class="form-group">
               <label class="responsive-text">Apellido</label>
-              <input type="text" name="lastname" class="form-control" formControlName="lastName"
+              <input type="text" name="lastname" class="form-control" formControlName="lastName" autocomplete="off"
                 [ngClass]="{ 'is-invalid': (submitted && usr['lastName'].errors)}" />
               <div class="text-danger" *ngIf="submitted && usr['lastName'].errors?.['required']">
                 El apellido es obligatorio
@@ -38,7 +38,7 @@
           <div class="col-md-6 col-sm-12 mb-2">
             <div class="form-group">
               <label class="responsive-text">Correo</label>
-              <input type="email" name="email" class="form-control" formControlName="email"
+              <input type="email" name="email" class="form-control" formControlName="email" autocomplete="off"
                 [ngClass]="{ 'is-invalid': (submitted && usr['email'].errors)}" />
               <div class="text-danger" *ngIf="submitted && usr['email'].errors?.['required']">
                 El correo es obligatorio
@@ -54,7 +54,7 @@
           <div class="col-md-6 col-sm-12 mb-2">
             <div class="form-group">
               <label class="responsive-text">Rol</label>
-              <select class="form-select responsive-text" formControlName="role"
+              <select class="form-select responsive-text" formControlName="role" autocomplete="off"
                 [ngClass]="{ 'is-invalid': (submitted && usr['role'].invalid)}">
                 <option selected disabled>Selecciona un rol</option>
                 <option value={{role}} *ngFor="let role of roles">{{ role }}</option>
@@ -67,7 +67,7 @@
           <div class="col-md-6 col-sm-12 mb-2">
             <div class="form-group">
               <label class="responsive-text">Estado</label>
-              <select class="form-select responsive-text" formControlName="status"
+              <select class="form-select responsive-text" formControlName="status" autocomplete="off"
                 [ngClass]="{ 'is-invalid': (submitted && usr['status'].invalid)}">
                 <option selected disabled>Selecciona un estado</option>
                 <option value={{status}} *ngFor="let status of userStatuses">{{ status }}</option>
