--- a/src/app/feature/components/users/components/updatemyuser/updatemyuser.component.html
+++ b/src/app/feature/components/users/components/updatemyuser/updatemyuser.component.html
@@ -12,8 +12,8 @@
                     <div class="col-md-6 col-sm-12 mb-2">
                         <div class="form-group">
                             <label class="responsive-text">Nombre</label>
-                            <input type="text" name="name" class="form-control" formControlName="name"
-                                [ngClass]="{ 'is-invalid': (submitted && usr['name'].errors)}" />
+                            <input type="text" name="name" class="form-control" autocomplete="off"
+                                formControlName="name" [ngClass]="{ 'is-invalid': (submitted && usr['name'].errors)}" />
                             <div class="text-danger" *ngIf="submitted && usr['name'].errors?.['required']">
                                 El nombre es obligatorio
                             </div>
@@ -26,7 +26,7 @@
                         <div class="form-group">
                             <label class="responsive-text">Apellido</label>
                             <input type="text" name="lastname" class="form-control" formControlName="lastName"
-                                [ngClass]="{ 'is-invalid': (submitted && usr['lastName'].errors)}" />
+                                autocomplete="off" [ngClass]="{ 'is-invalid': (submitted && usr['lastName'].errors)}" />
                             <div class="text-danger" *ngIf="submitted && usr['lastName'].errors?.['required']">
                                 El apellido es obligatorio
                             </div>
@@ -39,7 +39,7 @@
                         <div class="form-group">
                             <label class="responsive-text">Correo</label>
                             <input type="email" name="email" class="form-control" formControlName="email"
-                                [ngClass]="{ 'is-invalid': (submitted && usr['email'].errors)}" />
+                                autocomplete="off" [ngClass]="{ 'is-invalid': (submitted && usr['email'].errors)}" />
                             <div class="text-danger" *ngIf="submitted && usr['email'].errors?.['required']">
                                 El correo es obligatorio
                             </div>
@@ -54,7 +54,7 @@
                     <div class="col-md-6 col-sm-12 mb-2">
                         <div class="form-group">
                             <label class="responsive-text">Rol</label>
-                            <select class="form-select responsive-text" formControlName="role"
+                            <select class="form-select responsive-text" formControlName="role" autocomplete="off"
                                 [ngClass]="{ 'is-invalid': (submitted && usr['role'].invalid)}">
                                 <option selected disabled>Selecciona un rol</option>
                                 <option value={{role}} *ngFor="let role of roles">{{ role }}</option>
@@ -67,7 +67,7 @@
                     <div class="col-md-6 col-sm-12 mb-2">
                         <div class="form-group">
                             <label class="responsive-text">Estado</label>
-                            <select class="form-select responsive-text" formControlName="status"
+                            <select class="form-select responsive-text" formControlName="status" autocomplete="off"
                                 [ngClass]="{ 'is-invalid': (submitted && usr['status'].invalid)}">
                                 <option selected disabled>Selecciona un estado</option>
                                 <option value={{status}} *ngFor="let status of userStatuses">{{ status }}</option>
@@ -81,7 +81,7 @@
                         <div class="form-group">
                             <label class="responsive-text">Contraseña</label>
                             <input type="password" name="pass" class="form-control" formControlName="pass"
-                                [ngClass]="{ 'is-invalid': (submitted && usr['pass'].errors)}" />
+                                autocomplete="off" [ngClass]="{ 'is-invalid': (submitted && usr['pass'].errors)}" />
                             <div class="text-danger" *ngIf="submitted && usr['pass'].errors?.['required']">
                                 La contraseña es obligatoria
                             </div>
@@ -94,6 +94,7 @@
                         <div class="form-group">
                             <label class="responsive-text">Confirmar Contraseña</label>
                             <input type="password" name="confirmpass" class="form-control" formControlName="confirmPass"
+                                autocomplete="off"
                                 [ngClass]="{ 'is-invalid': (submitted && usr['confirmPass'].errors)}" />
                             <div class="text-danger" *ngIf="submitted && usr['confirmPass'].errors?.['required']">
                                 El confirmar contraseña es obligatorio
