--- a/src/app/feature/components/header/header.component.html
+++ b/src/app/feature/components/header/header.component.html
@@ -5,10 +5,11 @@
         </a>
         <ul class="nav mb-2 justify-content-center mb-md-0">
             <li>
-                <a class="nav-link px-2 text-white" [routerLink]="['/objects']" *ngIf="true">Objetos</a>
+                <a class="nav-link px-2 text-white" [routerLink]="['/objects']" *ngIf="logged">Objetos</a>
             </li>
             <li>
-                <a class="nav-link px-2 text-white" [routerLink]="['/users']" *ngIf="true">Usuarios</a>
+                <a class="nav-link px-2 text-white" [routerLink]="['/users']"
+                    *ngIf="role == 'Administrador' && logged">Usuarios</a>
             </li>
         </ul>
         <div class="text-end">
