--- a/src/app/feature/components/header/header.component.html
+++ b/src/app/feature/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="px-3 py-1 bg-blue text-white">
+<header class="px-3 py-1 bg-blue text-white pb-4">
     <div class="d-flex align-items-center justify-content-around prueba">
         <a [routerLink]="['/']" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
             <img src="assets/img/logo.png" alt="" />
