--- a/src/app/feature/components/session/login/login.component.css
+++ b/src/app/feature/components/session/login/login.component.css
@@ -18,6 +18,7 @@
     margin-top: -7%;
     border-radius: 7px;
     width: 100%;
+    padding: 10px;
 }
 
 .center-div {
@@ -31,7 +32,7 @@
     color: #fff;
 }
 
-.responsive-text{
+.responsive-text {
     font-size: 1rem;
 }
 
@@ -39,6 +40,7 @@ a {
     text-decoration: none;
     font-size: 13px;
 }
+
 @media (min-width: 768px) {
     .login-form {
         width: 75%;
