--- a/src/app/feature/components/session/forgotpassword/forgotpassword.component.css
+++ b/src/app/feature/components/session/forgotpassword/forgotpassword.component.css
@@ -17,6 +17,8 @@
     background-color: #fff;
     width: 50%;
     margin-top: -7%;
+    border-radius: 7px;
+    padding: 10px;
 }
 
 .center-div {
@@ -30,22 +32,18 @@
     color: #fff;
 }
 
-.title {
-    color: #0F385A;
-    font-size: 1vw;
-    width: 100%;
-    font-weight: bold;
-    letter-spacing: 1px;
-} 
-
-.responsive-text{
-    font-size: 1vw;
+.responsive-text {
+    font-size: 1rem;
 }
 
-.bold {
-    font-weight: bold;
+a {
+    text-decoration: none;
+    font-size: 13px;
 }
 
-.text-justify {
-    text-align: justify;
+@media (min-width: 768px) {
+    .login-form {
+        width: 75%;
+    }
+
 }
