--- a/src/app/feature/components/session/forgotpassword/forgotpassword.component.html
+++ b/src/app/feature/components/session/forgotpassword/forgotpassword.component.html
@@ -16,7 +16,8 @@
             </div>
             <div class="col-md-12">
               <div class="form-group text-center">
-                <button ng-click="authenticate()" ng-disabled="myForm.$invalid" class="btn bg-blue pull-right responsive-text">
+                <button ng-click="authenticate()" ng-disabled="myForm.$invalid"
+                  class="btn bg-blue pull-right responsive-text">
                   Listo
                   <i class="fa-solid fa-arrow-right"></i>
                 </button>
