--- a/src/app/feature/components/header/header.component.html
+++ b/src/app/feature/components/header/header.component.html
@@ -1,41 +1,55 @@
-<header class="px-3 py-1 bg-blue text-white pb-4">
-    <div class="d-flex align-items-center justify-content-around prueba">
-        <a [routerLink]="['/']" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-            <img src="assets/img/logo.png" alt="" />
-        </a>
-        <ul class="nav mb-2 justify-content-center mb-md-0">
-            <li>
-                <a class="nav-link px-2 text-white" [routerLink]="['/objects']" *ngIf="logged">Objetos</a>
-            </li>
-            <li>
-                <a class="nav-link px-2 text-white" [routerLink]="['/users']"
-                    *ngIf="role == 'Administrador' && logged">Usuarios</a>
-            </li>
-        </ul>
-        <div class="text-end">
-            <button type="button" class="btn btn-outline-light" [routerLink]="['/session']" *ngIf="!logged">
-                Login
-            </button>
+<header class="bg-blue text-white pb-2">
+    <div class="row">
+        <div class="col-3">
+            <a [routerLink]="['/']"
+                class="nav d-flex align-items-center text-white text-decoration-none justify-content-end">
+                <img src="assets/img/logo.png" alt="" />
+            </a>
         </div>
-        <div class="text-end" *ngIf="logged">
-            <div class="flex-shrink-0 dropdown" data-bs-toggle="dropdown">
-                <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="/assets/img/user.png" alt="mdo" width="32" height="32" class="rounded-circle user-img" />
-                </a>
-                <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-                    <li>
-                        <a class="dropdown-item" [routerLink]="['/users/myuser']">Mi Perfil</a>
-                    </li>
-                    <li><a class="dropdown-item" [routerLink]="['/session/resetpassword']">Cambiar Contraseña</a></li>
-                    <li>
-                        <hr class="dropdown-divider" />
-                    </li>
-                    <li>
-                        <a class="dropdown-item" (click)="onLogout()">Cerrar Sesión</a>
-                    </li>
-                </ul>
+        <div class="col-6">
+            <ul class="nav mb-2 justify-content-start mb-md-0 d-flex align-items-center height100">
+                <li>
+                    <a class="nav-link px-2 text-white" [routerLink]="['/objects']" *ngIf="logged">Objetos</a>
+                </li>
+                <li>
+                    <a class="nav-link px-2 text-white" [routerLink]="['/users']"
+                        *ngIf="role == 'Administrador' && logged || true">Usuarios</a>
+                </li>
+            </ul>
+            <div class="text-end">
+                <button type="button" class="btn btn-outline-light" [routerLink]="['/session']" *ngIf="!logged">
+                    Login
+                </button>
             </div>
         </div>
+        <div class="col-3">
+            <div class="text-end height100 d-flex align-items-center justify-content-start" *ngIf="logged">
+                <div class="flex-shrink-0 dropdown" data-bs-toggle="dropdown">
+                    <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="/assets/img/user.png" alt="mdo" width="32" height="32"
+                            class="rounded-circle user-img" />
+                    </a>
+                    <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
+                        <li>
+                            <a class="dropdown-item" [routerLink]="['/users/myuser']">Mi Perfil</a>
+                        </li>
+                        <li><a class="dropdown-item" [routerLink]="['/session/resetpassword']">Cambiar Contraseña</a>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider" />
+                        </li>
+                        <li>
+                            <a class="dropdown-item" (click)="onLogout()">Cerrar Sesión</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="d-flex align-items-center justify-content-around prueba">
+
+
+
     </div>
 </header>
